SQUAD-9-313 add update endpoint
